avformat/mov: Discard last STSC if its empty

Fixes: Ticket8508